<resources>
    <string name="app_name">Comics</string>

    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="sing_in">Entrar</string>

    <string name="shipping_message">Seu pagamento foi aprovado! Já estamos enviando seu pedido. Até a próxima!</string>
    <string name="buy">Comprar</string>
    <string name="description">Descricao</string>
    <string name="items_number">Número de Itens:</string>
    <string name="purchase_data">Dados da Compra</string>
    <string name="discount">Desconto:</string>
    <string name="total">Total:</string>
    <string name="payment_data">Dados de Cobrança</string>
    <string name="card_name">Nome no Cartão</string>
    <string name="card_number">Número do Cartão</string>
    <string name="valid_date">Validade</string>
    <string name="security_code">Código de Segurança</string>
    <string name="start_screen">Pagina inicial</string>
    <string name="pay">Pagar</string>
    <string name="coupon">Cupom</string>
    <string name="remove">Remover</string>
    <string name="error_get_comics_api">Não foi possível buscar os produtos da API</string>
    <string name="empty_car">Você ainda não possui itens em seu carrinho!</string>
    <string name="loading">Carregando...</string>
    <string name="added_to_car">Adiconado ao carrinho!</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="user_name">Nome:</string>
    <string name="user_e_mail">E-mail:</string>
    <string name="user_birthdate">Data de Nascimento:</string>
    <string name="user_zipcode">CEP:</string>
    <string name="user_phone">Telefone:</string>
    <string name="user">User</string>
</resources>
