<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".ui.UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avatar"
                tools:srcCompat="@drawable/avatar" />

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/user_name"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Jeferson Oliveira"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/name_textView"
                app:layout_constraintTop_toTopOf="@+id/name_textView" />

            <TextView
                android:id="@+id/email_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/user_e_mail"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toStartOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_textView" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="joliveira@gmail.com"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/email_textView"
                app:layout_constraintTop_toTopOf="@+id/email_textView" />

            <TextView
                android:id="@+id/birthdate_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/user_birthdate"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toStartOf="@id/birthdate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_textView" />

            <TextView
                android:id="@+id/birthdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="09/12/1985"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/birthdate_textView"
                app:layout_constraintTop_toTopOf="@+id/birthdate_textView" />

            <TextView
                android:id="@+id/zipcode_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/user_zipcode"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toStartOf="@id/zipcode"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthdate_textView" />

            <TextView
                android:id="@+id/zipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="99999-999"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/zipcode_textView"
                app:layout_constraintTop_toTopOf="@+id/zipcode_textView" />

            <TextView
                android:id="@+id/phone_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/user_phone"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toStartOf="@id/phone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zipcode_textView" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="(+55 83) 98888-8888"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/phone_textView"
                app:layout_constraintTop_toTopOf="@+id/phone_textView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_shopcar_button_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_action_shopping_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>